@@ -1,8 +1,12 @@
 package org.solarus.editor.gui;
 
 import java.awt.*;
+import java.awt.event.ActionEvent;
+import java.awt.event.ActionListener;
 
 import javax.swing.*;
+import javax.swing.event.ChangeEvent;
+import javax.swing.event.ChangeListener;
 
 import org.solarus.editor.*;
 
@@ -13,13 +17,13 @@ import org.solarus.editor.*;
 public class TreasureChooser extends JPanel {
 
     private Treasure treasure;			/**< the treasure to edit*/
-    
+
     // subcomponents
     private ItemChooser itemNameField;
     private NumberChooser variantField;
     private JCheckBox saveField;
     private NumberChooser savegameVariableField;
-    
+
     private GridBagConstraints gridBagConstraints;
 
     /**
@@ -29,11 +33,11 @@ public class TreasureChooser extends JPanel {
      * @param includeRandom true to include an option "Random"
      */
     public TreasureChooser(boolean includeNone, boolean includeRandom) {
-	
-	super();
-	
+
+	super(new GridBagLayout());
+
 	// create a default treasure
-	treasure = new Treasure("_none", 1, -1);
+	treasure = new Treasure("", 1, -1);
 
 	// create the subcomponents
 	itemNameField = new ItemChooser(includeNone, includeRandom);
@@ -42,32 +46,69 @@ public class TreasureChooser extends JPanel {
 	savegameVariableField = new NumberChooser(0, 0, 32767);
 
 	// place the subcomponents
+	setBorder(BorderFactory.createTitledBorder("Treasure"));
 	gridBagConstraints = new GridBagConstraints();
 	gridBagConstraints.insets = new Insets(5, 5, 5, 5); // margins
 	gridBagConstraints.anchor = GridBagConstraints.LINE_START;
 	gridBagConstraints.gridx = 0;
 	gridBagConstraints.gridy = 0;
-	
+
 	add(itemNameField, gridBagConstraints);
 	gridBagConstraints.gridy++;
-	
+
 	JPanel variantPanel = new JPanel();
-	variantPanel.add(new JLabel("Variant of this item:"));
+	variantPanel.add(new JLabel("Variant of this item"));
 	variantPanel.add(variantField);
-	add(variantField, gridBagConstraints);
+	add(variantPanel, gridBagConstraints);
 	gridBagConstraints.gridy++;
 
 	add(saveField, gridBagConstraints);
 	gridBagConstraints.gridy++;
 
 	JPanel savegameVariablePanel = new JPanel();
-	savegameVariablePanel.add(new JLabel("Savegame variable:"));
+	savegameVariablePanel.add(new JLabel("Savegame variable"));
 	savegameVariablePanel.add(savegameVariableField);
 	add(savegameVariablePanel, gridBagConstraints);
 	gridBagConstraints.gridy++;
+	
+	// create listeners
+	itemNameField.addActionListener(new ActionListener() {
+	    
+	    public void actionPerformed(ActionEvent arg0) {
+		treasure.setItemName(itemNameField.getSelectedId());
+	    }
+	});
+	
+	variantField.addChangeListener(new ChangeListener() {
+	    
+	    public void stateChanged(ChangeEvent e) {
+		treasure.setVariant(variantField.getNumber());
+	    }
+	});
 
+	saveField.addActionListener(new ActionListener() {
+	    
+	    public void actionPerformed(ActionEvent e) {
+		
+		if (saveField.isSelected()) {
+		    savegameVariableField.setEnabled(true);
+		    treasure.setSavegameVariable(savegameVariableField.getNumber());
+		}
+		else {
+		    savegameVariableField.setEnabled(false);
+		    treasure.setSavegameVariable(-1);
+		}
+	    }
+	});
+
+	savegameVariableField.addChangeListener(new ChangeListener() {
+	    
+	    public void stateChanged(ChangeEvent e) {
+		treasure.setSavegameVariable(savegameVariableField.getNumber());
+	    }
+	});
     }
-    
+
     /**
      * Returns the treasure represented in this component.
      * @return the treasure
@@ -78,15 +119,36 @@ public class TreasureChooser extends JPanel {
 
     /**
      * Sets all properties of the treasure represented in this component.
-     * @param ItemName name identifying the treasure to give (possibly "_none" or "_random")
+     * @param itemName name identifying the treasure to give (possibly "_none" or "_random")
      * @param variant variant of this item
      * @param savegameVariable savegame variable that stores the treasure's state,
      * or -1 to make the treasure unsaved
      */
-    public void setTreasure(String ItemName, int variant, int savegameVariable) {
+    public void setTreasure(String itemName, int variant, int savegameVariable) {
 
-	treasure.setItemName(ItemName);
+	treasure.setItemName(itemName);
 	treasure.setVariant(variant);
 	treasure.setSavegameVariable(savegameVariable);
+
+	update();
+    }
+
+    /**
+     * Updates this component according to the treasure. 
+     */
+    private void update() {
+
+	itemNameField.setSelectedId(treasure.getItemName());
+	variantField.setNumber(treasure.getVariant());
+
+	if (treasure.getSavegameVariable() == -1) {
+	    saveField.setSelected(false);
+	    savegameVariableField.setEnabled(false);
+	}
+	else {
+	    saveField.setSelected(true);
+	    savegameVariableField.setEnabled(true);
+	    savegameVariableField.setNumber(treasure.getSavegameVariable());
+	}
     }
 }
